--- a/views/index.html
+++ b/views/index.html
@@ -109,15 +109,15 @@
 
                   <div class="row">
                     <div class="col-md-9">
-                      <a href="#">
+                      <a href="javascripts:;">
                         <div class="item-dermpan korn" v-on:click="itemSelect" name="HAMMER">
                         </div>
                       </a>
-                      <a href="#">
+                      <a href="javascripts:;">
                         <div class="item-dermpan gunkai" v-on:click="itemSelect" name=" SCISSORS">
                         </div>
                       </a>
-                      <a href="#">
+                      <a href="javascripts:;">
                         <div class="item-dermpan kadard" v-on:click="itemSelect" name="PAPER">
                         </div>
                       </a>
@@ -152,13 +152,13 @@
                             <td>{{item.ownername}}</td>
                             <td class="text-center">{{item.betcoins}}</td>
                             <td class="text-center">
-                              <a href="#" id="HAMMER">
+                              <a href="javascripts:;" id="HAMMER">
                                  <img src="/images/korn.png" class="icon-size-item "  title="อันนี้ชนะ"  v-on:click="BetAway(item,'HAMMER')"/>
                               </a>
-                              <a href="#" >
+                              <a href="javascripts:;" >
                                 <img src="/images/gunkai.png" class="icon-size-item"  title="อันนี้แพ้บ่อยนะ"  v-on:click="BetAway(item,'SCISSORS')"/>
                                </a>
-                              <a href="#" >
+                              <a href="javascripts:;" >
                                <img src="/images/kadard.png" class="icon-size-item"   title="อันนี้กูชอบชนะ ชัวร์"  v-on:click="BetAway(item,'PAPER')"/>
                               </a>
                             </td>
