--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
     <div class="row" id="MainShow" hidden="hidden">
       <div class="col-md-12">
         <div class="row bg-timeline">
-          <div class="col-md-3 col-md-offset-9 box-profile">
+          <div class="col-md-3 col-sm-4 col-md-offset-9 col-sm-offset-8  col-xs-5 col-xs-offset-7 box-profile">
             <h4>
               <ins>{{nameProfile}}</ins>
             </h4>
@@ -70,7 +70,7 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                  <li class=""><a href="#"><i class="fa fa-exclamation"></i> Daily quest</a></li>
+                  <li class="" v-on:click="DailyQuest"><a href="#"><i class="fa fa-exclamation"></i> Daily quest</a></li>
                   <li class=""><a href="#"><i class="fa fa-trophy"></i> Ranking</a></li>
                   <li class=""><a href="#"><i class="fa fa-comment-o"></i> About</a></li>
 
@@ -108,7 +108,7 @@
 
 
                   <div class="row">
-                    <div class="col-md-9">
+                    <div class="col-sm-9 col-xs-8">
                       <a href="javascripts:;">
                         <div class="item-dermpan korn" v-on:click="itemSelect" name="HAMMER">
                         </div>
@@ -122,7 +122,7 @@
                         </div>
                       </a>
                     </div>
-                    <div class="col-md-3" style="padding-top:30px">
+                    <div class="col-sm-3 col-xs-4" style="padding-top:30px">
                       <input type="text" class="form-control" onkeypress="return isNumber(event)" maxlength="10" v-model="coinsDermpan" />
 
                     </div>
